Significant changes to style.css

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Profile</title>
 		<link rel="stylesheet" type="text/css" href="assests/css/resets.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		
 	</head>
 	<body>
 		<!-- Header (Name and Tabs) -->
