Changes to index.html & contact.html ->Finished responsivemess for contact.html

--- a/assignment1/contact.html
+++ b/assignment1/contact.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<!-- Header (Name and Tabs) -->
-		<header class="container">
+		<header class="container container-forms">
 			<h1>Yuuta Sumioka</h1>
 			<!-- Navigation Bar -->
 			<nav>
@@ -21,9 +21,9 @@
 		<div id="header_bar"></div>
 		<!-- Bio and Sidebar -->
 		<div id="content">
-			<div class="container">
+			<div class="container container-forms">
 				<!-- Main Content -->
-				<div id="main">
+				<div class="main forms" >
 					<h1>Contact</h1>
 					<hr>
 					<form>
