--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -25,7 +25,7 @@
 		<div id="content">
 			<div class="container">
 				<!-- Main Content -->
-				<div id="main">
+				<div class="main">
 					<h1>About Me</h1>
 					<hr>
 					<img src="assets/images/profile_picture.jpg">
