Finshed all mobile responsiveness (index, portfolio, and contact)

--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<!-- Header (Name and Tabs) -->
-		<header class="container">
+		<header class="container container-portfolio">
 			<h1>Yuuta Sumioka</h1>
 			<!-- Navigation Bar -->
 			<nav>
@@ -21,9 +21,9 @@
 		<div id="header_bar"></div>
 		<!-- Bio and Sidebar -->
 		<div id="content">
-			<div class="container">
+			<div class="container container-portfolio">
 				<!-- Main Content -->
-				<div id="main">
+				<div class="main portfolio">
 					<h1>Portfolio</h1>
 					<hr>
 					<div id="projects">
@@ -54,7 +54,7 @@
 					</div>
 				</div>
 				<!-- Sidebar (Connection Links) -->
-				<div id="sidebar">
+				<div class="sidebar">
 					<h2>Connect with Me</h2>
 					<hr id="sidebar_line">
 					<a href="https://github.com/ysumio120"><img src="assets/images/github_icon.png"></a>
