--- a/assignment1/contact.html
+++ b/assignment1/contact.html
@@ -37,7 +37,7 @@
 					</form>
 				</div>
 				<!-- Sidebar (Connection Links) -->
-				<div id="sidebar">
+				<div class="sidebar sidebar-contact">
 					<h2>Connect with Me</h2>
 					<hr id="sidebar_line">
 					<a href="https://github.com/ysumio120"><img src="assets/images/github_icon.png"></a>
