--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -34,7 +34,7 @@
 					<p>Other than programming, my hobbies include martial arts and tennis. I have done karate for 6+ years and earned my black belt. Though I stopped in the beginning of high school, I still have interests. My plan is to hopefully participate again some day. I'm originally from Northfield in South Jersey, but now live in Edison, NJ to finish school and work on becoming a fullstack web developer.</p>
 				</div>
 				<!-- Sidebar (Connection Links) -->
-				<div id="sidebar">
+				<div class="sidebar">
 					<h2>Connect with Me</h2>
 					<hr id="sidebar_line">
 					<a href="https://github.com/ysumio120"><img src="assets/images/github_icon.png"></a>
