--- a/assignment1/contact.html
+++ b/assignment1/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Profile</title>
 		<link rel="stylesheet" type="text/css" href="assests/css/resets.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
